--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "@heroicons/react": "^2.0.12",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
@@ -27,6 +28,7 @@
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.17",
+    "tailwind-scrollbar": "^2.1.0-preview.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
