--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-sanity": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.37.0",
     "react-simple-typewriter": "^4.0.5",
     "react-social-icons": "^5.15.0",
