--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ EMAILJS_reCAPTCHA_KEY=ed bot talking
 EMAILJS_TRACKING_ID =McQfTjWmZq4t7w!
 NEXT_PUBLIC_SANITY_DATASET = production
 NEXT_PUBLIC_SANITY_PROJECT_ID = e2f024ld
-NEXT_PUBLIC_BASE_URL =http://localhost:3000
+NEXT_PUBLIC_BASE_URL =https://my-portfolio-lilac-three.vercel.app
