--- a/package.json
+++ b/package.json
@@ -8,32 +8,42 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "keywords": [
+    "portfolio",
+    "sanity",
+    "software dev",
+    "edwin chebii",
+    "edchey",
+    "edcheyjr"
+  ],
   "dependencies": {
-    "@emailjs/browser": "^3.7.0",
-    "@heroicons/react": "^2.0.12",
-    "@portabletext/react": "^1.0.6",
-    "@sanity/image-url": "^1.0.1",
-    "framer-motion": "^7.5.3",
-    "next": "12.3.1",
-    "next-sanity": "^1.0.0",
+    "@emailjs/browser": "^3.10.0",
+    "@heroicons/react": "^2.0.16",
+    "@portabletext/react": "^2.0.2",
+    "@sanity/image-url": "^1.0.2",
+    "@vercel/analytics": "^1.0.1",
+    "framer-motion": "^10.6.0",
+    "next": "13.2.4",
+    "next-sanity": "^4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
-    "react-hook-form": "^7.37.0",
-    "react-simple-typewriter": "^4.0.5",
+    "react-hook-form": "^7.43.7",
+    "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
-    "swiper": "^8.4.3"
+    "sharp": "^0.31.3",
+    "swiper": "^9.1.1"
   },
   "devDependencies": {
-    "@types/node": "18.8.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.17",
-    "tailwind-scrollbar": "^2.1.0-preview.0",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^3.0.0",
+    "tailwindcss": "^3.2.7",
+    "typescript": "5.0.2"
   }
 }
