next dev build ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /node_modules
 /sanity/node_modules
+/sanity/.sanity
 /sanity/dist
 /.pnp
 .pnp.js
@@ -36,5 +37,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-TODO
 .vercel
+# TODO
+TODO
