--- a/sanity/package.json
+++ b/sanity/package.json
@@ -21,10 +21,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.15.1",
-    "styled-components": "^6.0.7"
+    "styled-components": "v5.3.11"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/edcheyjr/my-portfolio.git"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
