--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "swiper": "^10.2.0"
   },
   "devDependencies": {
+    "@sanity/vision": "^3.15.1",
+    "prop-types": "^15.8.1",
+    "sanity": "^3.15.1",
+    "styled-components": "v5.3.11",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
