--- a/package.json
+++ b/package.json
@@ -13,36 +13,41 @@
     "sanity",
     "software dev",
     "edwin chebii",
-    "edchey"
+    "edchey",
+    "edcheyjr"
   ],
   "dependencies": {
-    "@emailjs/browser": "^3.10.0",
-    "@heroicons/react": "^2.0.16",
-    "@portabletext/react": "^2.0.2",
+    "@emailjs/browser": "^3.11.0",
+    "@heroicons/react": "^2.0.18",
+    "@portabletext/react": "^3.0.4",
     "@sanity/image-url": "^1.0.2",
-    "@vercel/analytics": "^1.0.1",
-    "framer-motion": "^10.6.0",
-    "next": "13.2.4",
-    "next-sanity": "^4.1.5",
+    "@vercel/analytics": "^1.0.2",
+    "framer-motion": "^10.16.0",
+    "next": "13.4.19",
+    "next-sanity": "^5.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^3.1.4",
-    "react-hook-form": "^7.43.7",
+    "react-error-boundary": "^4.0.11",
+    "react-hook-form": "^7.45.4",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
-    "sharp": "^0.31.3",
-    "swiper": "^9.1.1"
+    "sharp": "^0.32.5",
+    "swiper": "^10.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "postcss": "^8.4.21",
-    "tailwind-scrollbar": "^3.0.0",
-    "tailwindcss": "^3.2.7",
-    "typescript": "5.0.2"
+    "@sanity/vision": "^3.15.1",
+    "prop-types": "^15.8.1",
+    "sanity": "^3.15.1",
+    "styled-components": "v5.3.11",
+    "@types/node": "20.5.1",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.15",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19",
+    "postcss": "^8.4.28",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.1.6"
   }
 }
