--- a/sanity/package.json
+++ b/sanity/package.json
@@ -1,35 +1,33 @@
 {
   "name": "my-portfolio",
   "private": true,
-  "version": "1.0.0",
-  "description": "To Know more about me and what i do go to this webpage **[`edchey`](https://edchey.com)**",
+  "version": "2.0.0",
+  "description": "To Know more about me and what i do go to this webpage **[`edchey`](https://edcheyjr.github.io/my-portfolio)**",
   "main": "package.json",
-  "author": "Edwin Chebii <edwinchebiikibet@gmail.com>",
+  "author": "Edwin Chebii <edcheyjr@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
-    "build": "sanity build"
+    "build": "sanity build",
+    "dev": "sanity dev"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.34.0",
-    "@sanity/core": "^2.34.0",
-    "@sanity/default-layout": "^2.34.0",
-    "@sanity/default-login": "^2.34.0",
-    "@sanity/desk-tool": "^2.34.1",
-    "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.34.0",
-    "eslint": "^8.6.0",
-    "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
-    "styled-components": "^5.2.0"
+    "@sanity/vision": "^3.15.1",
+    "eslint": "^8.47.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sanity": "^3.15.1",
+    "styled-components": "v5.3.11"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/edcheyjr/my-portfolio.git"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
