--- a/.github/workflows/dependabot-actions.yml
+++ b/.github/workflows/dependabot-actions.yml
@@ -15,7 +15,7 @@ jobs:
         with:
             alert-lookup: true
             compat-lookup: true
-            dependabot-token: "${{ secrets.DEPENDABOT_TOKEN }}"
+            github-token: "${{ secrets.DEPENDABOT_TOKEN }}"
           
       - name: Enable auto-merge for Dependabot PRs
         if: |
@@ -24,4 +24,4 @@ jobs:
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
-          DEPENDABOT_TOKEN: ${{ secrets.DEPENDABOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.DEPENDABOT_TOKEN }}
