--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,8 +8,8 @@ updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"    
+      interval: "monthly"    
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/sanity" # Location of package manifests
     schedule:
-      interval: "weekly"        
+      interval: "monthly"        
