update env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NODE_ENV =
 EMAILJS_reCAPTCHA_KEY=
 EMAILJS_TRACKING_ID =
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY =
@@ -6,3 +7,5 @@ NEXT_PUBLIC_EMAILJS_TEMPLATE_ID =
 NEXT_PUBLIC_SANITY_DATASET =
 NEXT_PUBLIC_SANITY_PROJECT_ID =
 NEXT_PUBLIC_BASE_URL =
+NEXT_PUBLIC_VERCEL_ENV =
+SANITY_API_READ_TOKEN = 
