--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "my-portfolio",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "TODO",
     "lint": "next lint"
   },
   "keywords": [
@@ -17,37 +18,37 @@
     "edcheyjr"
   ],
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
-    "@heroicons/react": "^2.0.18",
-    "@portabletext/react": "^3.0.11",
+    "@emailjs/browser": "^4.3.3",
+    "@heroicons/react": "^2.1.1",
+    "@portabletext/react": "^3.0.15",
     "@sanity/image-url": "^1.0.2",
-    "@vercel/analytics": "^1.1.1",
-    "framer-motion": "^10.16.4",
-    "next": "13.5.4",
-    "next-sanity": "^5.5.5",
+    "@vercel/analytics": "^1.2.2",
+    "framer-motion": "^11.0.20",
+    "next": "14.1.4",
+    "next-sanity": "^8.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^4.0.11",
-    "react-hook-form": "^7.49.2",
+    "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.51.1",
     "react-simple-typewriter": "^5.0.1",
-    "react-social-icons": "^6.7.0",
-    "sharp": "^0.33.1",
-    "swiper": "^11.0.3"
+    "react-social-icons": "^6.15.0",
+    "sharp": "^0.33.2",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
-    "@sanity/vision": "^3.23.4",
+    "@sanity/vision": "^3.35.2",
     "prop-types": "^15.8.1",
-    "sanity": "^3.20.2",
-    "styled-components": "v5.3.11",
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.28",
-    "@types/react-dom": "18.2.13",
-    "autoprefixer": "^10.4.16",
-    "eslint": "8.50.0",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8.4.31",
-    "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss": "^3.3.5",
-    "typescript": "5.3.2"
+    "sanity": "^3.35.2",
+    "styled-components": "6.1.8",
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.67",
+    "@types/react-dom": "18.2.22",
+    "autoprefixer": "^10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.4",
+    "postcss": "^8.4.38",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.3"
   }
 }
