--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -7,7 +7,7 @@ name: my-portfolio-workflow
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches: ['master']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -20,7 +20,7 @@ permissions:
 
 # Allow one concurrent deployment
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: true
 
 jobs:
@@ -50,8 +50,10 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version: '16'
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+      - name: Install sharp dependency
+        run: npm i sharp
       - name: Setup Pages
         uses: actions/configure-pages@v2
         with:
@@ -75,8 +77,6 @@ jobs:
       - name: Build with Next.js also include environment variables
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
         env:
-          EMAILJS_reCAPTCHA_KEY: ${{ secrets.EMAILJS_reCAPTCHA_KEY }}
-          EMAILJS_TRACKING_ID: ${{ secrets.EMAILJS_TRACKING_ID }}
           NEXT_PUBLIC_EMAILJS_PUBLIC_KEY: ${{ secrets.NEXT_PUBLIC_EMAILJS_PUBLIC_KEY }}
           NEXT_PUBLIC_EMAILJS_SERVICE_ID: ${{ secrets.NEXT_PUBLIC_EMAILJS_SERVICE_ID }}
           NEXT_PUBLIC_EMAILJS_TEMPLATE_ID: ${{ secrets.NEXT_PUBLIC_EMAILJS_TEMPLATE_ID }}
@@ -89,7 +89,6 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./out
-          
 
   # Deployment job
   deploy:
