added sanity token secret

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -83,6 +83,9 @@ jobs:
           NEXT_PUBLIC_SANITY_DATASET: ${{ secrets.NEXT_PUBLIC_SANITY_DATASET }}
           NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_SANITY_PROJECT_ID }}
           NEXT_PUBLIC_BASE_URL: ${{ secrets.NEXT_PUBLIC_BASE_URL }}
+          EMAILJS_reCAPTCHA_KEY: ${{ secrets.EMAILJS_reCAPTCHA_KEY }}
+          EMAILJS_TRACKING_ID: ${{ secrets.EMAILJS_TRACKING_ID }}
+          SANITY_API_READ_TOKEN: ${{ secrets.SANITY_API_READ_TOKEN }}
       - name: Static HTML export with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next export
       - name: Upload artifact
