--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ NEXT_PUBLIC_EMAILJS_TEMPLATE_ID =
 NEXT_PUBLIC_SANITY_DATASET =
 NEXT_PUBLIC_SANITY_PROJECT_ID =
 NEXT_PUBLIC_BASE_URL =
-NEXT_PUBLIC_VERCEL_ENV =
+# NEXT_PUBLIC_VERCEL_ENV =
 SANITY_API_READ_TOKEN = 
