--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -50,10 +50,10 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-      - name: Install sharp dependency
-        run: npm i sharp
+      # - name: Install sharp dependency
+      #   run: npm i sharp
       - name: Setup Pages
         uses: actions/configure-pages@v2
         with:
