--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -87,7 +87,7 @@ jobs:
           EMAILJS_TRACKING_ID: ${{ secrets.EMAILJS_TRACKING_ID }}
           SANITY_API_READ_TOKEN: ${{ secrets.SANITY_API_READ_TOKEN }}
       - name: Static HTML export with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next export
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
